--- a/thankyou.html
+++ b/thankyou.html
@@ -9,6 +9,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;600;700&family=Nunito:wght@400;800&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,20 +18,20 @@
 		<div class="navbar-top">
 			<div class="container">
 				<div class="navbar-top__content">
-					<a class="logo" href="#">
-						<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
+					<a class="logo" href="/" data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1000">
+						<img class="logo__img" loading="lazy" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
 					<form class="search navbar__search navbar__search--mobile--hidden" action="#">
 						<input class="search__input" type="text" placeholder="Search Location">
 						<button class="search__button button">
-							<img src="img/search.svg" alt="icon: search">
+							<img loading="lazy" src="img/search.svg" alt="icon: search">
 						</button>
 					</form>
 					<!-- /.search -->
 					<a class="user navbar__user navbar__user--mobile--hidden" href="#">
 						<div class="user__avatar">
-							<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
+							<img class="user__img" loading="lazy" src="img/user.jpg" alt="avatar: Nathan">
 						</div>
 						<span class="user__name">Nathan</span>
 					</a>
@@ -50,7 +51,7 @@
 					<li class="navbar-menu__item navbar-menu__item--mobile--visible">
 						<a class="user navbar__user navbar__user--mobile--visible" href="#">
 							<div class="user__avatar">
-								<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
+								<img class="user__img" loading="lazy" src="img/user.jpg" alt="avatar: Nathan">
 							</div>
 							<span class="user__name user__name--light">Nathan</span>
 						</a>
@@ -60,7 +61,7 @@
 						<form class="search navbar__search navbar__search--mobile--visible" action="#">
 							<input class="search__input search__input--mobile" type="text" placeholder="Search Location">
 							<button class="search__button button">
-								<img src="img/search.svg" alt="icon: search">
+								<img loading="lazy" src="img/search.svg" alt="icon: search">
 							</button>
 						</form>
 						<!-- /.search -->
@@ -97,6 +98,7 @@
 		<!-- /.container -->
 	</nav>
 	<!-- /.breadcrumb -->
+
 	<section class="hotel">
 		<div class="container">
 			<div class="hotel-wrapper">
@@ -118,7 +120,8 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-wrapper">
-				<img class="logo footer__logo" src="img/logo-vertical.svg" alt="logo: best tour plan">
+				<a href="/" class="footer__logo"><img class="logo footer__logo-img" loading="lazy" src="img/logo-vertical.svg"
+						alt="logo: best tour plan"></a>
 
 				<div class="footer__list footer__categories">
 					<h3 class="footer__title">All categories</h3>
@@ -155,9 +158,9 @@
 				<div class="footer__social-network">
 					<h3 class="footer__title footer__title--inline">Social Network</h3>
 					<div class="footer__social-links">
-						<a href="#" class="footer__link"><img src="img/facebook.svg" alt="icon: facebook"></a>
-						<a href="#" class="footer__link"><img src="img/youtube.svg" alt="icon: youtube"></a>
-						<a href="#" class="footer__link"><img src="img/instagram.svg" alt="icon: instagram"></a>
+						<a href="#" class="footer__link"><img loading="lazy" src="img/facebook.svg" alt="icon: facebook"></a>
+						<a href="#" class="footer__link"><img loading="lazy" src="img/youtube.svg" alt="icon: youtube"></a>
+						<a href="#" class="footer__link"><img loading="lazy" src="img/instagram.svg" alt="icon: instagram"></a>
 					</div>
 					<!-- /.footer__social-links -->
 				</div>
@@ -181,23 +184,32 @@
 					<ul class="footer__ul">
 						<li class="footer__item footer__item--mb-2">
 							<div class="footer__icon-wrapper">
-								<img class="footer__icon" src="img/map.svg" alt="icon: map">
+								<img class="footer__icon" loading="lazy" src="img/map.svg" alt="icon: map">
 							</div>
 							9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States
 						</li>
-						<li class="footer__item footer__item--mb-2">
+
+						<li class="footer__item footer__item--mb-2 footer-phones">
 							<div class="footer__icon-wrapper">
-								<img class="footer__icon" src="img/phone.svg" alt="icon: phone">
+								<img class="footer__icon" loading="lazy" src="img/phone.svg" alt="icon: phone">
 							</div>
-							Tel (business hours) : 269 1500 <br>
-							Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
-							Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+							<div class="footer-phones__text">
+								<a href="tel:2691500" class="footer__link footer-phones__item">Tel (business hours) : 269 1500</a>
+								<a href="tel:52566138" class="footer__link footer-phones__item">Tel (hotline) Monday - Saturday:
+									52-56-61-38 (08:00
+									am –
+									20:00 pm)</a>
+								<a href="tel:52566138" class="footer__link footer-phones__item">Tel (hotline) Sunday: 52-56-61-38 (08:00
+									am – 14:00
+									pm)</a>
+							</div>
 						</li>
+
 						<li class="footer__item footer__item--mb-2">
 							<div class="footer__icon-wrapper">
-								<img class="footer__icon" src="img/mail.svg" alt="icon: mail">
+								<img class="footer__icon" loading="lazy" src="img/mail.svg" alt="icon: mail">
 							</div>
-							cherly.lawson@example.com
+							<a class="footer__link" href="mailto:cherly.lawson@example.com">cherly.lawson@example.com</a>
 						</li>
 					</ul>
 				</div>
@@ -205,12 +217,23 @@
 
 				<div class="footer__contact-form">
 					<h3 class="footer__title">Send us a message</h3>
-					<form action="send.php" method="POST" class="footer__form">
-						<input class="input footer__input" type="text" placeholder="Your Full Name*" name="name">
-						<input class="input footer__input" type="text" placeholder="Phone Number*" name="phone">
-						<textarea class="footer__message" placeholder="Message" name="message"></textarea>
+					<form action="send.php" method="POST" class="footer__form form" data-aos="zoom-in" data-aos-delay="100"
+						data-aos-duration="1000">
+
+						<div class="footer__input-group">
+							<input class="input footer__input" type="text" placeholder="Your Full Name*" name="name" required
+								minlength="2">
+						</div>
+						<!-- /.footer__input-group -->
+						<div class="footer__input-group">
+							<input class="input footer__input phone" type="tel" placeholder="Phone Number*" name="phone"
+								minlength="18" required>
+						</div>
+						<!-- /.footer__input-group -->
+
+						<textarea class="footer__message message" placeholder="Message" name="message"></textarea>
 						<!-- /#.footer__message -->
-						<button class="footer__button button" type="submit">Send</button>
+						<button class="footer__button button form-button" type="submit">Send</button>
 						<!-- /.footer__button button -->
 						<span class="footer__info">* Required Fields</span>
 					</form>
@@ -227,7 +250,7 @@
 						<a href="#" class="footer-bottom__link">Cancellation policy</a>
 					</div>
 					<div class="footer-bottom__credit-cards">
-						<img src="img/credit-cards.png" alt="Credit cards" class="footer-bottom__img">
+						<img loading="lazy" src="img/credit-cards.png" alt="Credit cards" class="footer-bottom__img">
 					</div>
 				</div>
 			</div>
@@ -235,14 +258,55 @@
 		<!-- /.container -->
 	</footer>
 	<!-- /.footer -->
-	<div class="modal">
+
+	<div class="modal" id="booking-modal">
 		<div class="modal__overlay"></div>
 		<!-- /.modal__overlay -->
 		<div class="modal__dialog">
 			<a href="" class="modal__close">
-				<img src="img/close.svg" alt="Icon: close">
+				<img loading="lazy" src="img/close.svg" alt="Icon: close">
 			</a>
-			<!-- /.modal__close -->
+			<h3 class="modal__title">Booking</h3>
+			<!-- /.modal__title -->
+			<form action="send.php" method="POST" class="modal__form form">
+				<input class="input modal__input" type="text" placeholder="Your Full Name*" name="name" required minlength="2">
+				<input class="input modal__input phone" type="tel" placeholder="Phone Number*" name="phone" minlength="18"
+					required>
+				<input class="input modal__input" type="email" placeholder="Email*" name="email" required>
+				<textarea class="modal__message message" placeholder="Message" name="message"></textarea>
+				<!-- /#.modal__message -->
+				<div class="modal__button-wrap">
+					<button class="modal__button button form-button" type="submit">Send</button>
+					<!-- /.modal__button button -->
+					<span class="modal__info">* Required Fields</span>
+				</div>
+			</form>
+		</div>
+		<!-- /.modal__dialog -->
+	</div>
+	<!-- /.modal -->
+	<div class="modal" id="rating-modal">
+		<div class="modal__overlay"></div>
+		<!-- /.modal__overlay -->
+		<div class="modal__dialog">
+			<a href="" class="modal__close">
+				<img loading="lazy" src="img/close.svg" alt="Icon: close">
+			</a>
+			<h3 class="modal__title">Send us a feedback</h3>
+			<!-- /.modal__title -->
+			<form action="send.php" method="POST" class="modal__form form">
+				<input class="input modal__input" type="text" placeholder="Your Full Name*" name="name" required>
+				<input class="input modal__input phone" type="tel" placeholder="Phone Number*" name="phone" minlength="18"
+					required>
+				<input class="input modal__input" type="email" placeholder="Email*" name="email" required>
+				<textarea class="modal__message message" placeholder="Message" name="message"></textarea>
+				<!-- /#.modal__message -->
+				<div class="modal__button-wrap">
+					<button class="modal__button button form-button" type="submit">Send</button>
+					<!-- /.modal__button button -->
+					<span class="modal__info">* Required Fields</span>
+				</div>
+			</form>
 		</div>
 		<!-- /.modal__dialog -->
 	</div>
@@ -252,15 +316,16 @@
 
 	<script src="js/swiper-bundle.min.js"></script>
 	<!--Подключение слайдера-->
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US">
-	</script>
-	<script src="js/map.js"></script>
-	<!--Подключение яндекс карты-->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<!--Параллакс эффект-->
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.mask.min.js"></script>
+	<script src="js/aos.js"></script>
 	<script src="js/main.js"></script>
 </body>
+
+</html>
 
 </html>
